--- a/package.json
+++ b/package.json
@@ -19,5 +19,14 @@
     "eject": "react-scripts eject"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.1",
+    "eslint": "^5.4.0",
+    "eslint-plugin-react": "^7.11.1",
+    "jest-enzyme": "^6.0.4",
+    "react-test-renderer": "^16.4.2"
+  }
 }
