--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,34 +1,36 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "jest": true
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "jest": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "experimentalObjectRestSpread": true,
+      "modules": true,
+      "jsx": true
     },
-    "extends": ["eslint:recommended",
-      "plugin:react/recommended"],
-    "parser": "babel-eslint",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "modules": true,
-            "jsx": true
-        },
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-      "comma-dangle": 0,
-      "indent": ["error", 2],
-      "linebreak-style": ["error", "unix"],
-      "quotes": ["error", "single"],
-      "no-console": 1,
-      "no-unexpected-multiline": "warn",
-      "no-unused-vars": "warn",
-      "react/display-name": 1,
-      "react/jsx-uses-vars": 1,
-      "semi": ["error", "always"]
-    }
+    "sourceType": "module"
+  },
+  "plugins": ["react", "prettier"],
+  "rules": {
+    "prettier/prettier": "error",
+    "comma-dangle": 0,
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "no-console": 1,
+    "no-unexpected-multiline": "warn",
+    "no-unused-vars": "warn",
+    "react/display-name": 1,
+    "react/jsx-uses-vars": 1,
+    "semi": ["error", "always"]
+  }
 }
