--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
     "eslint": "^5.4.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "jest-enzyme": "^6.0.4",
+    "prettier": "^1.14.2",
     "react-test-renderer": "^16.4.2"
   }
 }
